# PluginCalculator2021

./: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Defines.hpp  Evaluator.cpp  Evaluator.hpp  Expression.cpp  Expression.hpp  ExpressionParser.cpp  ExpressionParser.hpp  LexemePluginLoader.cpp  LexemePluginLoader.hpp  RPNConverter.cpp  RPNConverter.hpp  StandartLexems.cpp  StandartLexems.hpp  main.cpp
Shared/: Token.cpp  Token.hpp
pow/: CMakeLists.txt  pow.cpp
trigonometry/: CMakeLists.txt  trigonometry.cpp
